--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
     <div id="page">
+        <div class="status">
+            AAAAAAAAAAAAAAAAAAAAAAAA
+        </div>
+        <div id="info">
+            <div id="info-tile" class="time">00:00:00</div>
+            <div id="info-tile" class="wrong">0</div>
+        </div>
         <div id="board">
             <div id="thirds">
                 <div id="tile" class="number">0</div>
@@ -125,9 +132,6 @@
             <div id="tile" class="choice">8</div>
             <div id="tile" class="choice">9</div>
             <div id="tile" class="delete">X</div>
-        </div>
-        <div class="status">
-            AAAAAAAAAAAAAAAAAAAAAAAA
         </div>
         <div id="buttons">
             <div id="button-tile" class="solve">Solve</div>
